# fft

./: Makefile  baseline_fft.cu  clang.sh  main.cu  my_fft.cu  my_fft.h  tool.sh
Figure5_1dFFT/: README.md  benchmark_figure5_1dfft.py  run_figure5.sh
conv/: Makefile  conv_naive.cpp  convolution.hpp  cudnn.cu  cufft.cu  cufft_tiled.cu  cufftdx.cu  gpuTimer.h  main.cu  my_fft.cu  my_fft.h  myconv.cu  myfft.cu  run.sh
fft/: Makefile  baseline_cufft.cu  baseline_fft.cu  fft_tc_sm.h  fft_tc_sm_bench.h  helper.h  main.cu  my_fft.cu  my_fft.h  my_fft_sm.h  run.sh  stat.cu  stat.h  utils.h
thunderfft/: CMakeLists.txt
thunderfft/bench/: CMakeLists.txt  main.cu
thunderfft/bench/baseline/: baseline_cufft.cu  fft_tc_sm.h  fft_tc_sm_bench.h  thunderfft_bench.h  thunderfft_bench_half.h  thunderfft_bench_half_128.h  thunderfft_bench_half_256.h
thunderfft/bench/util/: helper.h  stat.cu
thunderfft/include/thunderfft/: thunderfft.cuh  thunderfft_layout.h  thunderfft_layout_tuned.h
thunderfft/include/thunderfft/detail/: CMakeLists.txt  shared_kernel_fp32_n1024_b16.cuh  shared_kernel_fp32_n256_b16.cuh  shared_kernel_fp32_n4096_b1.cuh  shared_kernel_fp32_n64_b16.cuh  thunderfft_impl.cuh  thunderfft_impl_helper.cuh  thunderfft_impl_kernel.cuh  thunderfft_impl_twiddle.cuh  unit_kernel_fp16.cuh  unit_kernel_fp32.cuh  util_arith.h  util_cuda.h  utils.h
thunderfft/include/thunderfft/detail/kernel/: global_kernel.cuh  shared_kernel_fp32_n256_b16.cuh  shared_kernel_n1024_b1.cuh  shared_kernel_n128_b8.cuh  shared_kernel_n2048_b1.cuh  shared_kernel_n256_b16.cuh  shared_kernel_n4096_b1.cuh  shared_kernel_n512_b2.cuh  shared_kernel_n512_n2048_n4096_b4.cuh  shared_kernel_n64_b16.cuh  unit_kernel_fp16.cuh  unit_kernel_fp32.cuh
thunderfft/sample/: CMakeLists.txt  conv.cu  fft.cu  main.cu  utils.h
thunderfft/sample/bench/: CMakeLists.txt  main.cu
thunderfft/sample/bench/baseline/: baseline_cufft.cu  thunderfft_bench.h
thunderfft/sample/bench/util/: helper.h  stat.cu  stat.h
thunderfft/sample/conv1d/: CMakeLists.txt  conv1d_compare_cudnn_thunder.cu  conv1d_fullfft_l4096_thunder.cu  main.cu
thunderfft/sample/conv2d/: CMakeLists.txt  cufftdx.cu  main.cu  thunder.cu  thunder_tile128.cu  thunder_tile64.cu
thunderfft/sample/fft1d/: CMakeLists.txt  main.cu
utils/: helper.h
